--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@
 </div>
 </footer>
 <div id="popup" class="popup">
-<a href="#" class="popup__area"></a>
+<a href="##" class="popup__area"></a>
 <div class="popup__body">
 <div class="popup__content">
 <a href="##" class="popup__close close-popup"> <span></span> <span></span></a>
