--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div class="main__body">
         <div class="offer">
           <h1 class="offer__title">Ваше здоровье <span>в надежных руках</span></h1>
-          <div class="offer__text">Создаем комфортные условия для вашего лечения и восстановления, обеспечивая максимальную эффективность и удобство на каждом этапе.</div><a class="btn-green" href="#">Связаться с клиникой</a>
+          <div class="offer__text">Создаем комфортные условия для вашего лечения и восстановления, обеспечивая максимальную эффективность и удобство на каждом этапе.</div><a class="btn-green" href="#popup">Связаться с клиникой</a>
         </div>
         <div class="equip"> 
           <div class="img-micro"><img src="img/icons/microscope.svg" alt="img"></div>
